filtro  y agregar producto
filtro por nombre de producto y agregar un nuevo producto

--- a/frontend/src/app/componentes/administrador/agregar-producto/agregar-producto.component.html
+++ b/frontend/src/app/componentes/administrador/agregar-producto/agregar-producto.component.html
@@ -90,12 +90,12 @@
                 <div class="form-row">
                     <div class="col-md-4 mb-3">
                       <label for="validationServer09">Tiempo de sol</label>
-                      <input type="text" class="form-control form-control-sm" formControlName="tiempoSol" id="validationServer09"  required>
+                      <input type="text" class="form-control form-control-sm" formControlName="tiempoSol" id="validationServer09"  >
                       
                     </div>
                     <div class="col-md-4 mb-3">
                       <label for="validationServer10">Frecuencia de riego</label>
-                      <input type="text" class="form-control form-control-sm" formControlName="riego" id="validationServer10"  required>
+                      <input type="text" class="form-control form-control-sm" formControlName="riego" id="validationServer10"  >
                       
                     </div>
                     <div class="col-md-4 mb-3">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="form-row">
                   <div class="ui cards centered ">
-                    <label class="btn card ml-auto mr-auto w-50" (click)="inputPortada.click()" for="validationServer12">
+                    <label class="btn card ml-auto mr-auto w-50" for="validationServer12">
                       <div class="image">
                           <img class="w-100 img-fluid" [src]="portada" alt="portada">
                       </div>
@@ -128,7 +128,7 @@
 
                   <input
                   type="file"
-                  accept="image/*"
+                  accept=".jpg,.jpeg,.png,.gif"
                   class="custom-file-input"
                   id="validationServer12"
                   name="validationServer12"
@@ -149,7 +149,7 @@
                   </div>         
                   <input
                   type="file"
-                  accept="image/*"
+                  accept=".jpg,.jpeg,.png,.gif"
                   class="custom-file-input"
                   id="validationServer13"
                   name="validationServer13"
@@ -166,12 +166,11 @@
 
               </div>
             </div>
-            <!-- <button class="btn btn-primary" type="submit">Agregar</button> -->
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-agregar" (click)="agregarProducto()">Agregar producto</button>
+          <button type="submit" [disabled]="formularioProducto.invalid" class="btn btn-agregar" (click)="agregarProducto()">Agregar producto</button>
         </div>
       </div>
     </div>
