--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
@@ -25,7 +25,7 @@
 
                     <span class="span">Inventario</span>
                 </a>
-                <a class="list-group-item list-group-item-action  ">
+                <a [routerLink]="['./usuarios']" class="list-group-item list-group-item-action  ">
                     <i class="fas fa-users icono"></i>
 
                     <span class="span">Usuarios</span>
