--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -6,7 +6,7 @@
     <div>
         <div class="p-3 text-center">
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#addProductModal">Agregar producto</button>
-            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#modifyProductModal">Modificar producto</button>
+            <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" data-toggle="modal" data-target="#updateModal" (click)="updateModal.setProductInfo(1)">Modificar producto</button>
             <button class="btn btn-info col-4 col-sm-4 ml-3 mr-3 botones" style="width: 20%;" type="button" (click)="deleteProducts()">Eliminar producto</button>
         </div>
         <div class="table-responsive">
@@ -102,7 +102,5 @@
     </div>
 </div>
 
-<app-modificar-producto></app-modificar-producto>
+<app-modificar-producto #updateModal></app-modificar-producto>
 <app-agregar-producto></app-agregar-producto>
-
-
