--- a/frontend/src/app/componentes/perfil/perfil.component.html
+++ b/frontend/src/app/componentes/perfil/perfil.component.html
@@ -18,11 +18,10 @@
                     <div class="card" style="background-color: transparent;">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img src="{{url+'get-image/'+imagen}}" alt="" style="width: 150px; height: 150px;" *ngIf="imagen">
-                                <img src="assets/img/usuario.png" alt="" style="width: 150px; height: 150px;" *ngIf="!imagen">
+                                <img [src]="imagen || 'assets/img/usuario.png'" alt="" style="width: 150px; height: 150px;">
                                 <div class="file btn btn-lg btn-primary">
                                     Cambiar Foto
-                                    <input type="file" name="file" (change)="fileChangeEvent($event)"/>
+                                    <input type="file" name="file" />
                                 </div>
 
                             </div>
@@ -45,9 +44,7 @@
                                     {{nombreUsuario}}
                                 </div>
                                 <div class="col-sm-4 text-secondary">
-
-                                    <button type="button" class="btn btn-outline-success">Editar</button>
-
+                                    <button type="button" class="btn btn-link btn-editar" data-toggle="modal" data-target="#updateUserModal" (click)="modalModificar.setName(nombreUsuario)">Editar</button>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -58,7 +55,7 @@
                                     *************
                                 </div>
                                 <div class="col-sm-4 text-secondary">
-                                    <button type="button" class="btn btn-outline-success">Editar</button>
+                                    <button type="button" class="btn btn-link btn-editar" data-toggle="modal" data-target="#updateUserModal" (click)="modalModificar.setPassword()">Editar</button>
                                 </div>
                             </div>
 
@@ -81,13 +78,13 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-sm-4">
-                                    <h6 class="mb-0 pl-4">Número de Télefono:</h6>
+                                    <h6 class="mb-0 pl-4">Número de Teléfono:</h6>
                                 </div>
                                 <div class="col-sm-4 text-secondary">
                                     {{telefono}}
                                 </div>
                                 <div class="col-sm-4 text-secondary">
-                                    <button type="button" class="btn btn-outline-success">Editar</button>
+                                    <button type="button" class="btn btn-link btn-editar" data-toggle="modal" data-target="#updateUserModal" (click)="modalModificar.setPhone(telefono)">{{!(telefono) ? 'Editar' : 'Agregar'}}</button>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -98,7 +95,7 @@
                                     {{direccion}}
                                 </div>
                                 <div class="col-sm-4 text-secondary">
-                                    <button type="button" class="btn btn-outline-success">Editar</button>
+                                    <button type="button" class="btn btn-link btn-editar" data-toggle="modal" data-target="#updateUserModal" (click)="modalModificar.setAddress(direccion)">{{!(direccion)? 'Editar' : 'Agregar'}}</button>
                                 </div>
                             </div>
 
@@ -111,3 +108,5 @@
         </div>
     </div>
 </body>
+
+<app-actualizar-usuario #modalModificar [nombre]='nombreUsuario' [correo]='correo' [numTel]='telefono' [dir]='direccion'></app-actualizar-usuario>
